[gd_scene load_steps=6 format=3 uid="uid://ovr44b3cagfj"]

[ext_resource type="Script" uid="uid://bxk3bghwnhjod" path="res://scripts/main_node.gd" id="1_fltcg"]
[ext_resource type="PackedScene" uid="uid://b60g5yyayyp3t" path="res://scences/level_1.tscn" id="1_gu7s8"]
[ext_resource type="PackedScene" uid="uid://bjf3j02yshb1p" path="res://scences/player.tscn" id="2_fltcg"]
[ext_resource type="PackedScene" uid="uid://bj7pofd7kxa7g" path="res://scences/shield_object.tscn" id="4_8m825"]
[ext_resource type="PackedScene" uid="uid://chwnfbjbg5cwc" path="res://scences/trap.tscn" id="5_j3sgy"]

[node name="MainGame" type="Node2D"]
position = Vector2(16, -48)
script = ExtResource("1_fltcg")

[node name="Level1" parent="." instance=ExtResource("1_gu7s8")]

[node name="player" parent="." instance=ExtResource("2_fltcg")]
position = Vector2(32, -7)
script = null

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(184, -64)
zoom = Vector2(2.9, 3)

[node name="Shield" parent="." instance=ExtResource("4_8m825")]
position = Vector2(32, -7)

[node name="trap" parent="." instance=ExtResource("5_j3sgy")]
position = Vector2(273, -42)

[connection signal="body_entered" from="Shield" to="." method="_on_shield_body_entered"]
[connection signal="shield_retrieve" from="Shield" to="." method="_on_shield_shield_retrieve"]
[connection signal="shield_stop" from="Shield" to="." method="_on_shield_shield_stop"]
[connection signal="shield_throw" from="Shield" to="." method="_on_shield_shield_throw"]
